# scrape_serv

./: .env  .gitignore  Cargo.toml  Dockerfile  build.rs  env_template.txt  vcpkg.json
.github/workflows/: dockerhub.yml
cpp/: CMakeLists.txt
cpp/include/: gumbo_search_lib.hpp
cpp/src/: find_max_idx.cpp  find_meta.cpp
src/: find_detail.cpp  lib.cpp  main.rs  redis_communication.rs  thread_handler.rs  update_tag.cpp
src/engine/: engine.rs  err.rs  mod.rs
src/parser/: mod.rs
src/redis_lib/: acquire.rs  mod.rs  req_fetch.rs
src/redis_window/: err.rs  library.rs  mod.rs  redis_window.rs
src/scrape_window/: err.rs  mod.rs  model.rs  parser_ffi.rs  scrape_window.rs
src/scraper/: mod.rs
src/serv_engine/: mod.rs  post_process.rs  prior_process.rs  scrape_process.rs
src/thread_handler/: mod.rs
